--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     }
   ],
   "devDependencies": {
-    "mocha": "3.2.0",
+    "mocha": "^8.3.2",
     "should": "11.2.0"
   },
   "main": "./lib/inflection.js",
